--- a/app/events/event-details/event-details.component.html
+++ b/app/events/event-details/event-details.component.html
@@ -1,24 +1,36 @@
-<div class="container">
-  <img [src]="event?.imageUrl" [alt]="event?.name" class="event-image">
+<div class="container-fluid">
+    <img [src]="event?.imageUrl" [alt]="event?.name" class="event-image">
 
-  <div class="row">
-    <div class="col-md-11">
-      <h2>{{event?.name}} </h2>
+    <div class="row">
+        <div class="col-md-12">
+            <h2>{{event?.name | uppercase}} </h2>
+        </div>
     </div>
-  </div>
 
-  <div class="row">
-    <div class="col-md-6">
-      <div><strong>Date:</strong> {{event?.date}}</div>
-      <div><strong>Time:</strong> {{event?.time}}</div>
-      <div><strong>Price:</strong> ${{event?.price}}</div>
+    <div class="row">
+        <div class="col-md-6">
+            <div><strong>Date:</strong> {{event?.date | date:'shortDate'}}</div>
+            <div><strong>Time:</strong> {{event?.time}}</div>
+            <div><strong>Price:</strong> {{event?.price | currency:'USD':true}}</div>
+        </div>
+        <div class="col-md-6">
+            <address>
+                <strong>Address:</strong><br />
+                {{event?.location?.address}}<br />
+                {{event?.location?.city}}, {{event?.location?.country}}
+            </address>
+        </div>
     </div>
-    <div class="col-md-6">
-      <address>
-        <strong>Address:</strong><br />
-        {{event?.location?.address}}<br />
-        {{event?.location?.city}}, {{event?.location?.country}}
-      </address>
+    <hr />
+    <div class="row">
+        <div class="col-md-6">
+            <h3 style="margin:0;">Sessions</h3>
+        </div>
+        <div class="col-md-6">
+            <a (click)="addSession()" *ngIf="!addMode" class="pull-right">Add New Session</a>
+        </div>
     </div>
-  </div>
+    <hr />
+    <session-list *ngIf="!addMode" [sessions]="event?.sessions"></session-list>
+    <create-session *ngIf="addMode" (saveNewSession)="saveNewSession($event)" (cancelAddSession)="cancelAddSession()"></create-session>
 </div>
